Docs/kubernetes/deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mms-docs-generator
  namespace: mms-docs-v1
  labels:
    app: mms-docs-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mms-docs-generator
  template:
    metadata:
      labels:
        app: mms-docs-generator
    spec:
      containers:
        - name: torus9x-tdpdocs
          image: 192.168.2.164:5000/mms-docs-v1:docker_tag
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mms-docs-generator
  namespace: mms-docs-v1
spec:
  selector:
    app: mms-docs-generator
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
